# lab4

./: .gitignore  README.md  pyproject.toml
src/: casino.py  chip.py  config.py  constants.py  goose.py  main.py  player.py  simulation.py
tests/: test_casino.py  test_chip.py  test_collections.py  test_goose.py  test_player.py  test_simulation.py
