[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "typer>=0.20.0",
    "colorama>=0.4.6",
    "coverage>=7.12.0",
    "pytest-cov>=7.0.0"

]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "-q",
]
testpaths = ["tests"]
pythonpath = ["src"]
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/__init__.py", "*/main.py", "*/config.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
